test/1.2/errors/T_ERECUR.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

method rec() {
    /// ERROR ERECUR
    inline $rec();
}

// This used to crash, bug 21369
method rec2(i) {
    /// ERROR ERECUR
    inline $rec2(i);
}

method init() {
    call $rec();
    inline $rec2(0);
}
